--- a/src/notes/vue/03.md
+++ b/src/notes/vue/03.md
@@ -380,6 +380,373 @@ Vue.use(KvWebComponents);
 
 :::
 
+:::snippet KvGrid 栅格布局
+
+1. 栅格布局拆分 KvRow、KvCol 组件来进行布局排版
+2. KvRow 根据属性设置样式主要设置 flex 布局和对应的相关属性提取为 props
+3. KvCol 获取父组件 gutter 来设置当前组建的间隔和属性生成 class 和 style
+4. KvCol 循环生成 24 栅格样式
+
+```scss
+@for $i from 0 through 24 {
+  .kv-col-#{$i} {
+    width: (1 / 24 * $i * 100) * 1%;
+  }
+  .kv-col-offset-#{$i} {
+    margin-left: (1 / 24 * $i * 100) * 1%;
+  }
+  .kv-col-pull-#{$i} {
+    position: relative;
+    right: (1 / 24 * $i * 100) * 1%;
+  }
+  .kv-col-push-#{$i} {
+    position: relative;
+    left: (1 / 24 * $i * 100) * 1%;
+  }
+}
+```
+
+5. KvCol 根据不同的分辨率生成 24 栅格样式
+
+```scss
+@media only screen and (max-width: 768px) {
+  @for $i from 0 through 24 {
+    .kv-col-xs-#{$i} {
+      width: (1 / 24 * $i * 100) * 1%;
+    }
+    .kv-col-offset-xs-#{$i} {
+      margin-left: (1 / 24 * $i * 100) * 1%;
+    }
+    .kv-col-pull-xs-#{$i} {
+      position: relative;
+      right: (1 / 24 * $i * 100) * 1%;
+    }
+    .kv-col-push-xs-#{$i} {
+      position: relative;
+      left: (1 / 24 * $i * 100) * 1%;
+    }
+  }
+}
+```
+
+6. KvRow
+
+```html
+<script>
+  export default {
+    name: "KvRow",
+    componentName: "KvRow",
+    props: {
+      tag: { type: String, default: "div" },
+      gutter: Number,
+      type: String,
+      justify: { type: String, default: "start" },
+      align: { type: String, default: "top" }
+    },
+    computed: {
+      style() {
+        const css = {};
+        if (this.gutter) {
+          css.marginLeft = `-${this.gutter / 2}px`;
+          css.marginRight = css.marginLeft;
+        }
+        return css;
+      }
+    },
+    render(h) {
+      return h(
+        this.tag,
+        {
+          class: [
+            "kv-row",
+            this.justify !== "start" ? `kv-row--justify-${this.justify}` : "",
+            this.align !== "top" ? `kv-row--align-${this.align}` : "",
+            { "kv-row--flex": this.type === "flex" }
+          ],
+          style: this.style
+        },
+        this.$slots.default
+      );
+    }
+  };
+</script>
+<style lang="scss" scoped>
+  .kv-row {
+    position: relative;
+    box-sizing: border-box;
+
+    &::before,
+    &::after {
+      display: table;
+      content: "";
+    }
+
+    &::after {
+      clear: both;
+    }
+  }
+
+  .kv-row--flex {
+    display: flex;
+
+    &:before,
+    &:after {
+      display: none;
+    }
+  }
+
+  .kv-row--justify-start {
+    justify-content: flex-start;
+  }
+
+  .kv-row--justify-center {
+    justify-content: center;
+  }
+
+  .kv-row--justify-end {
+    justify-content: flex-end;
+  }
+
+  .kv-row--justify-end {
+    justify-content: flex-end;
+  }
+
+  .kv-row--justify-space-between {
+    justify-content: space-between;
+  }
+
+  .kv-row--justify-space-around {
+    justify-content: space-around;
+  }
+
+  .kv-row--align-top {
+    align-items: flex-start;
+  }
+
+  .kv-row--align-middle {
+    align-items: center;
+  }
+
+  .kv-row--align-bottom {
+    align-items: flex-end;
+  }
+</style>
+```
+
+7. KvCol
+
+```html
+<script>
+  export default {
+    name: "KvCol",
+    props: {
+      span: { type: Number, default: 24 },
+      tag: { type: String, default: "div" },
+      offset: Number,
+      pull: Number,
+      push: Number,
+      xs: [Number, Object],
+      sm: [Number, Object],
+      md: [Number, Object],
+      lg: [Number, Object],
+      xl: [Number, Object]
+    },
+    computed: {
+      gutter() {
+        let parent = this.$parent;
+        while (parent && parent.$options.componentName !== "KvRow") {
+          parent = parent.$parent;
+        }
+        return parent ? parent.gutter : 0;
+      }
+    },
+    render(h) {
+      let classList = [];
+      let style = {};
+      if (this.gutter) {
+        style.paddingLeft = this.gutter / 2 + "px";
+        style.paddingRight = style.paddingLeft;
+      }
+      ["span", "offset", "pull", "push"].forEach(prop => {
+        if (this[prop] || this[prop] === 0) {
+          classList.push(
+            prop !== "span"
+              ? `kv-col-${prop}-${this[prop]}`
+              : `kv-col-${this[prop]}`
+          );
+        }
+      });
+      ["xs", "sm", "md", "lg", "xl"].forEach(size => {
+        if (typeof this[size] === "number") {
+          classList.push(`kv-col-${size}-${this[size]}`);
+          return;
+        }
+        if (typeof this[size] === "object") {
+          let props = this[size];
+          Object.keys(props).forEach(prop => {
+            classList.push(
+              prop !== "span"
+                ? `kv-col-${size}-${prop}-${props[prop]}`
+                : `kv-col-${size}-${props[prop]}`
+            );
+          });
+        }
+      });
+      return h(
+        this.tag,
+        {
+          class: ["kv-col", classList],
+          style
+        },
+        this.$slots.default
+      );
+    }
+  };
+</script>
+<style lang="scss" scoped>
+  [class*="kv-col-"] {
+    float: left;
+    box-sizing: border-box;
+  }
+
+  .kv-col-0 {
+    display: none;
+  }
+
+  @for $i from 0 through 24 {
+    .kv-col-#{$i} {
+      width: (1 / 24 * $i * 100) * 1%;
+    }
+
+    .kv-col-offset-#{$i} {
+      margin-left: (1 / 24 * $i * 100) * 1%;
+    }
+
+    .kv-col-pull-#{$i} {
+      position: relative;
+      right: (1 / 24 * $i * 100) * 1%;
+    }
+
+    .kv-col-push-#{$i} {
+      position: relative;
+      left: (1 / 24 * $i * 100) * 1%;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    @for $i from 0 through 24 {
+      .kv-col-xs-#{$i} {
+        width: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-offset-xs-#{$i} {
+        margin-left: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-pull-xs-#{$i} {
+        position: relative;
+        right: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-push-xs-#{$i} {
+        position: relative;
+        left: (1 / 24 * $i * 100) * 1%;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 768px) {
+    @for $i from 0 through 24 {
+      .kv-col-sm-#{$i} {
+        width: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-offset-sm-#{$i} {
+        margin-left: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-pull-sm-#{$i} {
+        position: relative;
+        right: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-push-sm-#{$i} {
+        position: relative;
+        left: (1 / 24 * $i * 100) * 1%;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 992px) {
+    @for $i from 0 through 24 {
+      .kv-col-md-#{$i} {
+        width: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-offset-md-#{$i} {
+        margin-left: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-pull-md-#{$i} {
+        position: relative;
+        right: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-push-md-#{$i} {
+        position: relative;
+        left: (1 / 24 * $i * 100) * 1%;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    @for $i from 0 through 24 {
+      .kv-col-lg-#{$i} {
+        width: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-offset-lg-#{$i} {
+        margin-left: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-pull-lg-#{$i} {
+        position: relative;
+        right: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-push-lg-#{$i} {
+        position: relative;
+        left: (1 / 24 * $i * 100) * 1%;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 1920px) {
+    @for $i from 0 through 24 {
+      .kv-col-xl-#{$i} {
+        width: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-offset-xl-#{$i} {
+        margin-left: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-pull-xl-#{$i} {
+        position: relative;
+        right: (1 / 24 * $i * 100) * 1%;
+      }
+
+      .kv-col-push-xl-#{$i} {
+        position: relative;
+        left: (1 / 24 * $i * 100) * 1%;
+      }
+    }
+  }
+</style>
+```
+
+:::
+
 :::snippet 代码下载
 
 项目地址：[https://github.com/kitorv/kv-web-components](https://github.com/kitorv/kv-web-components)
