--- a/src/notes/vue/01.md
+++ b/src/notes/vue/01.md
@@ -42,7 +42,7 @@ vue ui
 
 ![在线访问](../../assets/images/vue-01-08.png)
 
-10. 项目根目录创建 `vue.config.js` ，github 部署在线访问需要配置项目路径
+10. 项目根目录创建 `vue.config.js` ，github 部署在线访问需要配置项目路径,与 github 项目名称一致
 
 ```javascript
 module.exports = {
