--- a/src/notes/vue/04.md
+++ b/src/notes/vue/04.md
@@ -1,4 +1,4 @@
-:::snippet 样式主题提取
+:::snippet 样式主题
 
 1. scss 可以 `$` 来定义变量,将基础变量提取到`variable.scss`
 
@@ -164,6 +164,22 @@ $--button-border-radius: 4px !default;
     border-radius: 14px;
   }
 }
+```
+
+4. 主题定制，创建 theme.scss
+
+```scss
+$--color-primary: #5b3cc4;
+@import "kv-web-components/packages/index.scss";
+```
+
+5. 引入样式
+
+```javascript
+import Vue from "vue";
+import KvWebComponents from "kv-web-components";
+import "./theme.scss";
+Vue.use(KvWebComponents);
 ```
 
 :::
