默认链接样式

--- a/src/notes/vue/02.md
+++ b/src/notes/vue/02.md
@@ -278,6 +278,11 @@ module.exports = {
       .test(/\.md/)
       .use("vue-loader")
       .loader("vue-loader")
+      .options({
+        compilerOptions: {
+          preserveWhitespace: false
+        }
+      })
       .end()
       .use("markdown-loader")
       .loader(
