--- a/src/notes/vue/04.md
+++ b/src/notes/vue/04.md
@@ -327,6 +327,8 @@ Vue.use(KvWebComponents);
 }
 ```
 
+5. 效果查看 [https://kitorv.github.io/kv-web-components/#/checkbox](https://kitorv.github.io/kv-web-components/#/checkbox)
+
 :::
 
 :::snippet 复选框组
@@ -443,5 +445,185 @@ Vue.use(KvWebComponents);
   };
 </script>
 ```
+
+3. 效果查看 [https://kitorv.github.io/kv-web-components/#/checkbox](https://kitorv.github.io/kv-web-components/#/checkbox)
+
+:::
+
+:::snippet 单选框
+
+1. 单选框基本与复选框实现类似，不同的是单选框多个一起使用所以必须使用 KvRadioGroup，在组件中设置 provide
+
+```html
+<template>
+  <div class="kv-radio-group">
+    <slot></slot>
+  </div>
+</template>
+<script>
+  export default {
+    name: "KvRadioGroup",
+    componentName: "KvRadioGroup",
+    provide() {
+      return { kvRadioGroup: this };
+    },
+    props: {
+      value: {
+        type: [Number, String],
+        required: true
+      },
+      disabled: Boolean
+    }
+  };
+</script>
+<style>
+  .kv-radio-group {
+    font-size: 0;
+  }
+</style>
+```
+
+2. 子组件 KvRadio 中 inject 依赖注入 KvRadioGroup 在通过 computed 拆分详细的 get 和 set 来取值和赋值
+
+```html
+<template>
+  <label
+    :class="['kv-radio',{'kv-radio--checked':model===value},{'kv-radio--disabled':isDisabled}]"
+  >
+    <span class="kv-radio--check">
+      <span class="kv-radio--check-inner"></span>
+      <input type="radio" v-model="model" :value="value" />
+    </span>
+    <span class="kv-radio--text" v-if="$slots.default">
+      <slot></slot>
+    </span>
+  </label>
+</template>
+
+<script>
+  export default {
+    name: "KvRadio",
+    componentName: "KvRadio",
+    inject: ["kvRadioGroup"],
+    props: {
+      value: {
+        type: [Number, String],
+        required: true
+      },
+      disabled: Boolean
+    },
+    computed: {
+      model: {
+        get() {
+          return this.kvRadioGroup.value;
+        },
+        set(value) {
+          this.kvRadioGroup.$emit("input", value);
+        }
+      },
+      isDisabled() {
+        if (this.kvRadioGroup) {
+          return this.kvRadioGroup.disabled || this.disabled;
+        }
+        return this.disabled;
+      }
+    }
+  };
+</script>
+```
+
+3. 样式设置
+
+```scss
+@import "../../style/variable.scss";
+
+.kv-radio {
+  position: relative;
+  font-size: 14px;
+  display: inline-block;
+  white-space: nowrap;
+  user-select: none;
+  cursor: pointer;
+}
+
+.kv-radio + .kv-radio {
+  margin-left: 15px;
+}
+
+.kv-radio--check {
+  white-space: nowrap;
+  cursor: pointer;
+  outline: none;
+  display: inline-block;
+  line-height: 1;
+  position: relative;
+  vertical-align: middle;
+
+  > input {
+    display: none;
+  }
+}
+
+.kv-radio--check-inner {
+  border: $--radio-border;
+  background-color: $--radio-background-color;
+  display: inline-block;
+  position: relative;
+  border-radius: 50%;
+  box-sizing: border-box;
+  width: 18px;
+  height: 18px;
+  z-index: 1;
+  transition: all 0.3s;
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 4px;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    background-color: $--color--primary;
+    border-top: 0;
+    border-left: 0;
+    border-radius: 50%;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.2s;
+  }
+}
+
+.kv-radio--text {
+  display: inline-block;
+  padding-left: 10px;
+  line-height: 20px;
+}
+
+.kv-radio--checked {
+  .kv-radio--check-inner {
+    border-color: $--color--primary;
+  }
+
+  .kv-radio--check-inner::after {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.kv-radio--disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+```
+
+4. 效果查看 [https://kitorv.github.io/kv-web-components/#/radio](https://kitorv.github.io/kv-web-components/#/radio)
+
+:::
+
+:::snippet 代码下载
+
+项目地址：[https://github.com/kitorv/kv-web-components](https://github.com/kitorv/kv-web-components)
+
+当前版本：[https://github.com/kitorv/kv-web-components/releases/tag/v0.2.0](https://github.com/kitorv/kv-web-components/releases/tag/v0.2.1)
 
 :::
