--- a/src/notes/vue/03.md
+++ b/src/notes/vue/03.md
@@ -284,7 +284,7 @@ export default new Router({
 <router-link class="k-v-conpoenent--link" to="/">Button</router-link>
 ```
 
-7. 效果查看
+7. 效果查看 [https://kitorv.github.io/kv-web-components/#/button](https://kitorv.github.io/kv-web-components/#/button)
 
 ![KvButton演示](../../assets/images/vue-03-01.png)
 
@@ -744,6 +744,8 @@ Vue.use(KvWebComponents);
   }
 </style>
 ```
+
+8. 效果查看 [https://kitorv.github.io/kv-web-components/#/grid](https://kitorv.github.io/kv-web-components/#/grid)
 
 :::
 
